# API

./: API.cpp  API.sln  API.vcxproj  API.vcxproj.filters  CMakeLists.txt  CompanyDb.cpp  CompanyDb.h  README.md  backupCode.txt  company.db  database.db  main.cpp
